--- a/lint-python/action.yml
+++ b/lint-python/action.yml
@@ -34,6 +34,5 @@ runs:
     - uses: returntocorp/semgrep-action@v1
       with:
         config: >- # more at semgrep.dev/explore
-          p/security-audit
-          p/secrets
+          p/bandit
       if: ${{ always() }}
