Move actions to .github dir Add security workflow and action Add security action Add custom rules for the secret searching

--- a/.github/actions/lint-python/action.yml
+++ b/.github/actions/lint-python/action.yml
@@ -33,6 +33,6 @@ runs:
 
     - uses: returntocorp/semgrep-action@v1
       with:
-        config: >- # more at semgrep.dev/explore
+        config: >-
           p/bandit
       if: ${{ always() }}
