Try to use a local actions

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - uses: ${{ github.action_path }}/lidofinance/linters/.github/actions/lint-security
+      - uses: "${{ github.action_path }}/lidofinance/linters/.github/actions/lint-security"
