fix: requred false

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       dirs:
-        required: true
+        required: false
         type: string
         default: "./"
       pylint-args:
