--- a/.github/actions/lint-python/action.yml
+++ b/.github/actions/lint-python/action.yml
@@ -3,7 +3,7 @@ description: 'Lint python with pylint, black, isort and semgrep/bandit'
 inputs:
   dirs:
     description: "Where is placed python code"
-    required: true
+    required: false
     default: "./"
   pylint-args:
     description: "Additional args to pylint"
