fix: python lints args (#9)
* fix: python lints args

* fix: requred false

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -4,8 +4,9 @@ on:
   workflow_call:
     inputs:
       dirs:
-        required: true
+        required: false
         type: string
+        default: "./"
       pylint-args:
         required: false
         type: string
