--- a/.github/actions/lint-security/action.yml
+++ b/.github/actions/lint-security/action.yml
@@ -15,3 +15,10 @@ runs:
         config: >-
           .semgrep
       if: ${{ always() }}
+
+    - name: TruffleHog OSS
+      uses: trufflesecurity/trufflehog@v3.3.4
+      with:
+        path: ./
+        base: ${{ github.event.repository.default_branch }}
+        head: HEAD
