feat: Create a separate action for trufflehog

--- a/.github/actions/lint-security/action.yml
+++ b/.github/actions/lint-security/action.yml
@@ -6,7 +6,7 @@ runs:
   steps:
 
     - name: TruffleHog OSS
-      uses: trufflesecurity/trufflehog@v3.4.1
+      uses: lidofinance/linters/.github/actions/lint-security/trufflehog@trufflehog
       if: always()
       with:
         path: ./
