--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - uses: lidofinance/linters/.github/actions/lint-security@master
