fix: False positive reports
Should not report for 
> etherscanApiKey || ''

--- a/.github/actions/lint-security/rules/generic-secrets.yaml
+++ b/.github/actions/lint-security/rules/generic-secrets.yaml
@@ -1,7 +1,7 @@
 rules:
   - id: detected-generic-secrets
     patterns:
-      - pattern-regex: (([aA][pP][iI](_)?[kK][eE][yY])|([sS][eE][cC][rR][eE][tT])|([pP][aA][sS][sS][wW][oO][rR][dD]))(\s+)?[:|=](\s+)?['|\"](?!\s*$).+?['|\"]
+      - pattern-regex: (([aA][pP][iI](_)?[kK][eE][yY])|([sS][eE][cC][rR][eE][tT])|([pP][aA][sS][sS][wW][oO][rR][dD]))(\s+)?[:=](\s+)?['|\"](?!\s*$).+?['|\"]
       - pattern-not-regex: (['|\"](\$)?\{\{.*?\}\}['|\"])
       - pattern-not-regex: os.getenv
       - pattern-not-regex: (=(\s+)?['|"]\$)
