Add CodeQL to security linter

--- a/.github/actions/lint-security/action.yml
+++ b/.github/actions/lint-security/action.yml
@@ -24,3 +24,11 @@ runs:
       with:
         config: >-
           .semgrep
+
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      if: always()
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
+      if: always()
