--- a/.github/actions/lint-security/action.yml
+++ b/.github/actions/lint-security/action.yml
@@ -27,8 +27,8 @@ runs:
 
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
-      if: always()
+      if: ${{ always() && !github.event.repository.private }}
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
-      if: always()
+      if: ${{ always() && !github.event.repository.private }}
