--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -2,6 +2,10 @@ name: Lint Security
 
 on:
   workflow_call:
+    inputs:
+      languages:
+        required: false
+        type: string
 jobs:
   security-linters:
     name: Check security issues
@@ -13,3 +17,5 @@ jobs:
           fetch-depth: 0
 
       - uses: lidofinance/linters/.github/actions/lint-security@master
+        with:
+          languages: ${{ inputs.languages }}
