--- a/.github/actions/lint-actions/action.yml
+++ b/.github/actions/lint-actions/action.yml
@@ -9,11 +9,10 @@ runs:
         echo "::add-matcher::${{ github.action_path }}/actionlint-matcher.json"
       shell: bash
 
-#    - name: Run Actionlint
-#      shell: bash
-#      run: bash <(curl https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash) &&
-#           ./actionlint -color -verbose
+    - name: Run Actionlint
+      shell: bash
+      run: actionlint -color -verbose
 
     - name: Check github workflow yaml files validity
       shell: bash
-      run: npx v8r@latest ".github/**/*" --ignore-errors
+      run: npx v8r@0.13.0 ".github/**/*" --ignore-errors
