set persist-credentials to false

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Set up Python ${{ inputs.python-version }}
         uses: actions/setup-python@v4
