--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - uses: lidofinance/linters/.github/actions/lint-security@master
         with:
