--- a/.github/workflows/todos.yml
+++ b/.github/workflows/todos.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - uses: lidofinance/linters/.github/actions/lint-todos@master
         with:
