Temporary off codeql actions due to workflow permissions isn't specified in the repos

--- a/.github/actions/lint-security/action.yml
+++ b/.github/actions/lint-security/action.yml
@@ -32,12 +32,12 @@ runs:
         config: >-
           .semgrep
 
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
-      if: ${{ always() && !github.event.repository.private && inputs.skip-codeql == 'false' }}
-      with:
-        languages: ${{ inputs.languages }}
-
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v2
-      if: ${{ always() && !github.event.repository.private && inputs.skip-codeql == 'false' }}
+#    - name: Initialize CodeQL
+#      uses: github/codeql-action/init@v2
+#      if: ${{ always() && !github.event.repository.private && inputs.skip-codeql == 'false' }}
+#      with:
+#        languages: ${{ inputs.languages }}
+#
+#    - name: Perform CodeQL Analysis
+#      uses: github/codeql-action/analyze@v2
+#      if: ${{ always() && !github.event.repository.private && inputs.skip-codeql == 'false' }}
