--- a/.github/actions/lint-security/action.yml
+++ b/.github/actions/lint-security/action.yml
@@ -26,7 +26,7 @@ runs:
       shell: bash
 
     - name: Run semgrep security checks
-      uses: returntocorp/semgrep-action@v1
+      uses: semgrep/semgrep-action@v1
       if: always()
       with:
         config: >-
