--- a/.github/actions/lint-docker/action.yml
+++ b/.github/actions/lint-docker/action.yml
@@ -15,7 +15,8 @@ runs:
   using: "composite"
   steps:
 
-  - uses: hadolint/hadolint-action@v2.0.0
+    # https://github.com/hadolint/hadolint-action/releases/tag/v2.0.0 
+  - uses: lidofinance/hadolint-action@0a6d062e780d218ea909a18365e0ab2e36d09612
     with:
       dockerfile: ${{ inputs.dockerfile }}
       recursive: ${{ inputs.recursive }}
