--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -17,4 +17,4 @@ jobs:
         with:
           node-version: 16
 
-      - uses: lidofinance/linters/.github/actions/lint-actions@master
+      - uses: ./.github/actions/lint-actions
