--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -56,7 +56,7 @@ jobs:
           curl -sSL https://install.python-poetry.org | python - &&
           poetry install
 
-      - uses: lidofinance/linters/.github/actions/lint-python@master
+      - uses: ./.github/actions/lint-python
         with:
           dirs: ${{ inputs.dirs }}
           pylint-args: ${{ inputs.pylint-args }}
